--- a/data/articles/authentication-with-next-and-prisma.mdx
+++ b/data/articles/authentication-with-next-and-prisma.mdx
@@ -2,8 +2,11 @@
 title: Authentication and DB access with Next, Prisma
 publishedAt: "2022-11-17"
 description: A sample description of this application.
+categories : ["Software Engineer"]
+tags:
+  - react
+  - typescript
 seoDescription: This is the seoDescription for this markdown file.
-category: "Software Engineering"
 author: { name: "Vo Thanh Luan", image: "https://imgur.com/wnuKAT5.jpg" }
 image: https://imgur.com/fnduee1.jpg'
 ---
