--- a/data/articles/authentication-with-next-and-prisma.mdx
+++ b/data/articles/authentication-with-next-and-prisma.mdx
@@ -6,7 +6,9 @@ categories:
   - title: Software Engineer
 tags:
   - title: react
-  - title: typeScript
+  - title: typescript
+  - title: next
+  - title: mongoDB
 seoDescription: This is the seoDescription for this markdown file.
 author: { name: "Vo Thanh Luan", image: "https://imgur.com/wnuKAT5.jpg" }
 image: https://imgur.com/fnduee1.jpg'
