--- a/data/articles/authentication-with-next-and-prisma.mdx
+++ b/data/articles/authentication-with-next-and-prisma.mdx
@@ -1,12 +1,12 @@
 ---
 title: Authentication and DB access with Next, Prisma
 publishedAt: "2022-11-17"
-description: A sample description of this application.
+description: How to connect your mongoDB with prisma and next.js
 categories:
   - title: Software Engineer
 tags:
   - title: react
-  - title: typescript
+  - title: prisma
   - title: next
   - title: mongoDB
 seoDescription: This is the seoDescription for this markdown file.
