--- a/data/articles/what-is-react.mdx
+++ b/data/articles/what-is-react.mdx
@@ -1,9 +1,9 @@
 ---
-title: What is React?
+title: What is Scikit-learn?
 publishedAt: "2022-11-18"
-description: Everything you need to know about React
+description: Everything you need to know about Scikit-learn
 categories:
-  - title: Software Engineer
+  - title: Data Analytics
 tags:
   - title: react
 seoDescription: This is the seoDescription for this markdown file.
