--- a/articles/series-algorithm-two-sum.mdx
+++ b/articles/series-algorithm-two-sum.mdx
@@ -9,5 +9,7 @@ tags:
   - title: algorithm
 seoDescription: This is the seoDescription for this markdown file.
 author: { name: "Vo Thanh Luan", image: "https://imgur.com/wnuKAT5.jpg" }
-image: https://i.imgur.com/jp7dHTq.jpg'
+image: https://imgur.com/CUjOCjk.jpg'
 ---
+
+## Problem statement
