--- a/articles/series-algorithm-valid-anagram.mdx
+++ b/articles/series-algorithm-valid-anagram.mdx
@@ -9,7 +9,7 @@ tags:
   - title: algorithm
 seoDescription: This is the seoDescription for this markdown file.
 author: { name: "Vo Thanh Luan", image: "https://imgur.com/wnuKAT5.jpg" }
-image: https://i.imgur.com/jp7dHTq.jpg'
+image: https://imgur.com/CUjOCjk.jpg'
 ---
 
 ## Problem statement
@@ -211,7 +211,7 @@ var isAnagram = function(s, t) {
 };
 ```
 
-Here is another version of it forreference:
+Here is another version of it for reference:
 ```javascript
 var countCharacterOccurrences = function (str) {
     var charCount = {};
