refactor: update code

--- a/src/www/content/articles/data-analytic/data-modelling-using-scikit-learn.mdx
+++ b/src/www/content/articles/data-analytic/data-modelling-using-scikit-learn.mdx
@@ -1,16 +1,13 @@
 ---
-id: 3
 title: Data Modelling classification problem - Part 1
 publishedAt: "2023-03-18"
 description: How can you train the model in data analytics with three different machine learning algorithm
-categories:
-  - title: Data Analytics
+category: Data Analytics
 tags:
   - title: pandas
   - title: matplotlib
-seoDescription: This is the seoDescription for this markdown file.
-author: { name: "Vo Thanh Luan", image: "https://imgur.com/wnuKAT5.jpg" }
-image: https://i.imgur.com/uAurwRT.png'
+links:
+  coverImg: https://i.postimg.cc/cLRn4LC6/system-design.png
 ---
 
 ## Introduction
