--- a/src/www/content/articles/system-design/series-system-design-what-is-scalability.mdx
+++ b/src/www/content/articles/system-design/series-system-design-what-is-scalability.mdx
@@ -1,15 +1,12 @@
 ---
-id: 6
 title: Series System Design - What is scalability ?
 publishedAt: "2023-12-24"
 description: In this installment of Series System Design, we delve into the fundamental concept of scalability. Discover the essence of scalability and its pivotal role in designing systems that can effortlessly expand and handle increased demands. Uncover the key principles behind creating scalable architectures as we explore the crucial aspects that define scalability in the realm of system design.
-categories:
-  - title: System Design
+category: System Design
 tags:
   - title: scalability
-seoDescription: This is the seoDescription for this markdown file.
-author: { name: "Vo Thanh Luan", image: "https://imgur.com/wnuKAT5.jpg" }
-image: https://imgur.com/CUjOCjk.jpg'
+links:
+  coverImg: https://i.postimg.cc/cLRn4LC6/system-design.png
 ---
 
 ## The context - why do we ever need the scalability ?
