--- a/src/www/content/articles/web-development/authentication-with-next-and-prisma.mdx
+++ b/src/www/content/articles/web-development/authentication-with-next-and-prisma.mdx
@@ -1,18 +1,15 @@
 ---
-id: 1
 title: Authentication and DB access with Next, Prisma
 publishedAt: "2022-11-17"
 description: How to connect your mongoDB with prisma and next.js
-categories:
-  - title: Web Development
+category: Web Development
 tags:
   - title: react
   - title: prisma
   - title: next
   - title: mongoDB
-seoDescription: This is the seoDescription for this markdown file.
-author: { name: "Vo Thanh Luan", image: "https://imgur.com/wnuKAT5.jpg" }
-image: https://imgur.com/fnduee1.jpg'
+links:
+  coverImg: https://i.postimg.cc/cLRn4LC6/system-design.png
 ---
 
 ## Overview
@@ -68,7 +65,7 @@ npx prisma init
 
 This creates a basic `/prisma/schema.prisma` file. This schema is adapted for use in Prisma and based on NextAuth main schema. We will modify the schema to work with NextAuth, enter the following code into the schema:
 
-```js
+```ts
 datasource db {
   provider = "mongodb"
   url      = env("DATABASE_URL")
@@ -92,19 +89,25 @@ npx prisma generate
 
 We can start using PrismaClient to interact with our database. We’ll use a single PrismaClient instance that we can import into any file where needed. Create a new `./prisma/prisma.ts` file:
 
-```js
+```ts
 import { PrismaClient } from "@prisma/client"
 
-let prisma
-if (process.env.NODE_ENV === "production") {
-  prisma = new PrismaClient()
-} else {
-  if (!global.prisma) {
-    global.prisma = new PrismaClient()
-  }
-  prisma = global.prisma
+import { env } from "./env"
+
+const prismaGlobal = global as typeof global & {
+  prisma?: PrismaClient
 }
-export default prisma
+
+export const prisma: PrismaClient =
+  prismaGlobal.prisma ??
+  new PrismaClient({
+    log:
+      env.NODE_ENV === "development" ? ["query", "error", "warn"] : ["error"],
+  })
+
+if (env.NODE_ENV !== "production") {
+  prismaGlobal.prisma = prisma
+}
 ```
 
 ## Set up our Google application
@@ -131,7 +134,7 @@ NEXTAUTH_URL=http://localhost:3000
 
 To add NextAuth.js to a project, create a file called `[...nextauth].ts` in pages/api/auth. This contains the dynamic route handler for NextAuth.js, which will also contain all your global NextAuth.js configurations. All requests to /api/auth/\* (signIn, callback, signOut, etc.) will automatically be handled by NextAuth.js. We also configure your NextAuth.js to use the Prisma Adapter and Prisma client.
 
-```js
+```ts
 import { PrismaAdapter } from "@next-auth/prisma-adapter"
 import NextAuth from "next-auth"
 import GoogleProvider from "next-auth/providers/google"
@@ -178,7 +181,7 @@ Instances of useSession will then have access to the session data and status. Th
 
 **Quick note**: To display images from another domain using Next.js Image, we need to add it to a list of domains in our `./next.config.js` file
 
-```js
+```ts
 const nextConfig = {
   reactStrictMode: true,
   images: {
