--- a/src/www/content/articles/web-development/front-end-framework-choice-2023.mdx
+++ b/src/www/content/articles/web-development/front-end-framework-choice-2023.mdx
@@ -1,18 +1,15 @@
 ---
-id: 2
 title: What frontend framework should you choose in 2023 ?
 publishedAt: "2022-11-20"
 description: Choose front-end framework for your next application
-categories:
-  - title: Web Development
+category: Web Development
 tags:
   - title: react
   - title: angular
   - title: vue
   - title: svelte
-seoDescription: This is the seoDescription for this markdown file.
-author: { name: "Vo Thanh Luan", image: "https://imgur.com/wnuKAT5.jpg" }
-image: https://i.imgur.com/jp7dHTq.jpg'
+links:
+  coverImg: https://i.postimg.cc/cLRn4LC6/system-design.png
 ---
 
 ## Introduction
