--- a/src/www/content/articles/algorithm/series-algorithm-valid-anagram.mdx
+++ b/src/www/content/articles/algorithm/series-algorithm-valid-anagram.mdx
@@ -1,15 +1,12 @@
 ---
-id: 4
 title: Series Algorithm - Valid Anagram
 publishedAt: "2023-12-24"
 description: Leetcode Question 242. Valid Anagram - Easy
-categories:
-  - title: Algorithm & Data Structure
+category: Algorithm & Data Structure
 tags:
   - title: algorithm
-seoDescription: This is the seoDescription for this markdown file.
-author: { name: "Vo Thanh Luan", image: "https://imgur.com/wnuKAT5.jpg" }
-image: https://imgur.com/CUjOCjk.jpg'
+links:
+  coverImg: https://i.postimg.cc/TwwGSCBf/leetcode.png
 ---
 
 ## Problem statement
