fix: responsive for single article screen (50%)

--- a/src/www/content/articles/algorithms/valid-anagram.mdx
+++ b/src/www/content/articles/algorithms/valid-anagram.mdx
@@ -2,7 +2,7 @@
 title: Series Algorithm - Valid Anagram
 publishedAt: "2023-12-24"
 description: Leetcode Question 242. Valid Anagram - Easy
-category: Algorithm & Data Structure
+category: Algorithms
 tags:
   - title: algorithm
 links:
