--- a/src/www/content/articles/system-design/scalability.mdx
+++ b/src/www/content/articles/system-design/scalability.mdx
@@ -1,5 +1,5 @@
 ---
-title: Series System Design - What is scalability ?
+title: What is Scalability? The Definitive Guide
 publishedAt: "2023-12-24"
 description: In this installment of Series System Design, we delve into the fundamental concept of scalability. Discover the essence of scalability and its pivotal role in designing systems that can effortlessly expand and handle increased demands. Uncover the key principles behind creating scalable architectures as we explore the crucial aspects that define scalability in the realm of system design.
 category: System Design
