--- a/src/www/content/articles/web-development/frontend-framework-comparison.mdx
+++ b/src/www/content/articles/web-development/frontend-framework-comparison.mdx
@@ -1,5 +1,5 @@
 ---
-title: What frontend framework should you choose in 2023 ?
+title: What frontend framework should you choose ?
 publishedAt: "2022-11-20"
 description: Choose front-end framework for your next application
 category: Web Development
