--- a/src/www/content/articles/algorithms/two-sum.mdx
+++ b/src/www/content/articles/algorithms/two-sum.mdx
@@ -2,7 +2,7 @@
 title: Series Algorithm - Two Sum
 publishedAt: "2023-12-24"
 description: Leetcode Question 1. Two Sum - Easy
-category: Algorithm & Data Structure
+category: Algorithms
 tags:
   - title: algorithm
 links:
